Fixed some styling. Z-index problematic, but need to do chat

--- a/app/assets/stylesheets/base_styling/reset.scss
+++ b/app/assets/stylesheets/base_styling/reset.scss
@@ -59,10 +59,10 @@ input[type="submit"] {
 }
 
 body > #root {
-    /* height: 100%; */
+    height: 100%;
     width: 100%;
     position: relative;
-    min-height: 100%;
+    // min-height: 100%;
     /* width: 100vw; */
     /* display: flex;
     flex-direction: column; */
