--- a/app/assets/stylesheets/main/channels/channel_show.scss
+++ b/app/assets/stylesheets/main/channels/channel_show.scss
@@ -1,19 +1,29 @@
 .mainpage-body{
     position: relative;
-    height: 100vh;
-    width: 100vw;
+    // height: 100vh;
+    // width: 100vw;
+    height: 100%;
+    width: 100%;
     padding: 102px 0 0 260px;
+    z-index: -1;
     top: 0;
     right: 0;
+    .show {
+        border-top: 1px solid $dark-tan;
+        height: 100%;
+        width: 100%;
+    }
     footer {
         height: 136px;
         width: 100%;
         padding-left: 260px;
-        background: $light-tan;
-        position: absolute;
         bottom: 0;
         right: 0;
+        z-index: 2;
+        position: absolute;
         div {
+            width: 100%;
+            background: $light-tan;
             height: 100%;
             @include flex(column);
             h1 {
