--- a/app/assets/stylesheets/main/sidebar.scss
+++ b/app/assets/stylesheets/main/sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
     position: fixed;
     top: 39px;
-    z-index: 2;
+    z-index: 0;
     background: $dark-blue;
     height: calc(100vh - 39px);
     width: 260px;
